--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -19,6 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="1.每次任务有10张图片需要标识；\n2.您可以跳过不喜欢的图片，我们以后将减少推送此类的图片给您;\n3.每个标记之间用中文逗号隔开；\n4.为了更准确地给您推送感兴趣的图片，请在个人兴趣中选择您的兴趣领域。"/>
+            android:text="@string/default_text"/>
     </LinearLayout>
 </ScrollView>
