--- a/app/src/main/res/layout/activity_reset_pssword.xml
+++ b/app/src/main/res/layout/activity_reset_pssword.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:hint="请输入新密码"
+        android:hint="@string/enter_new_pass"
         android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
         android:inputType="textPassword" />
 
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:hint="确认新密码"
+        android:hint="@string/comfirm_new_pass"
         android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
         android:inputType="textPassword" />
 
@@ -30,5 +30,5 @@
         android:id="@+id/sure"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="确认" />
+        android:text="@string/sure" />
 </LinearLayout>
