--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,7 +16,7 @@
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="请输入您想注册的用户名"
+            android:hint="@string/enter_user_name"
             android:textSize="14dp"
             android:singleLine="true"
             android:selectAllOnFocus="true"/>
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
-            android:hint="请输入密码"
+            android:hint="@string/enter_password"
             android:maxLines="1"
             android:textSize="14dp"
             android:selectAllOnFocus="true"/>
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
-            android:hint="请重复密码"
+            android:hint="@string/enter_pass_again"
             android:maxLines="1"
             android:textSize="14dp"
             android:selectAllOnFocus="true"/>
@@ -67,7 +67,7 @@
             android:id="@+id/signup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="注册" />
+            android:text="@string/sign_up" />
     </LinearLayout>
 
 </RelativeLayout>
