--- a/app/src/main/res/layout/progress.xml
+++ b/app/src/main/res/layout/progress.xml
@@ -12,7 +12,7 @@
         android:clickable="true"
         android:visibility="invisible"
         android:background="@color/LightGrey"
-        android:text="点击加载更多" />
+        android:text="@string/more" />
     <ProgressBar
         android:id="@+id/pg"
         android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
         android:gravity="center"
         android:layout_height="40dp"
         android:background="@color/LightGrey"
-        android:text="我也是有底线的"
+        android:text="@string/no_more"
         android:textSize="12dp"
         android:visibility="gone"/>
 
