历史纪录显示积分变化

--- a/app/src/main/res/layout/list_item_proj_plan.xml
+++ b/app/src/main/res/layout/list_item_proj_plan.xml
@@ -46,7 +46,7 @@
 
     <TextView
         android:id="@+id/text_tags"
-        android:layout_width="fill_parent"
+        android:layout_width="130dp"
         android:layout_height="fill_parent"
         android:layout_marginBottom="4dp"
         android:layout_marginLeft="4dp"
@@ -55,4 +55,14 @@
         android:maxLines="2"
         android:textColor="#555555"
         android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/score"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="4dp"
+        android:gravity="center" />
 </LinearLayout>
