--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,6 +66,19 @@
             android:layout_height="wrap_content"
             android:checked="false"
             android:text="@string/auto_login" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:gravity="right">
+            <TextView
+                android:id="@+id/forget_pass"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/forget_pass"
+                android:gravity="center"/>
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -81,16 +94,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login" />
+
         <Button
             android:id="@+id/sign_up"
             android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:text="@string/sign_up" />
-        <Button
-            android:id="@+id/forget_pass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/forget_pass" />
 
     </LinearLayout>
 
