选完兴趣直接finish 不完满的沉浸式

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -11,6 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     android:gravity="bottom">
 
     <de.hdodenhof.circleimageview.CircleImageView
